# lang-train

./: .gitignore  main.py  pyproject.toml
debates/: Debate_on_the_Existence_of_God.txt  RealityCheck.txt  Russia_Ukraine_War.txt  Science_vs_Religion.txt
