[project]
name = "langchain-training"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.14.3",
    "ipykernel>=7.3.0",
    "langchain>=1.3.12",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.7",
    "langchain-mistralai>=1.1.6",
    "langchain-ollama>=1.1.0",
    "langgraph-checkpoint-postgres>=3.1.0",
    "mistralai[realtime]>=2.6.0",
    "psycopg[binary]>=3.3.4",
    "pyaudio>=0.2.14",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "speechrecognition>=3.17.0",
]

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu124"
explicit = true


[tool.uv.sources]
torch = { index = "pytorch-cuda" }
torchvision = { index = "pytorch-cuda" }
torchaudio = { index = "pytorch-cuda" }
